# modern-software-architecture-design-patterns-mono

./: .gitignore  LICENSE.md  README.md
exercises/: exercises.md  java-snippets.md  (+2 more)
python/: pyproject.toml
python/src/workshop_api/: __init__.py  __main__.py  main.py
python/src/workshop_api/external_invoice_provider/: invoice_provider_controller.py  invoice_provider_schemas.py  invoice_provider_status.py  invoice_provider_store.py
python/src/workshop_api/fitness/: __init__.py  customer_controller.py  customer_entity.py  customer_schemas.py  customer_service.py  database.py  invoice_provider_schemas.py  membership_controller.py  membership_entity.py  membership_schemas.py  plan_controller.py  plan_service.py
python/src/workshop_api/fitness/activate_membership/: activate_membership_controller.py  activate_membership_request.py  activate_membership_response.py
python/src/workshop_api/fitness/cancel_membership/: cancel_membership_controller.py  cancel_membership_response.py
python/src/workshop_api/fitness/create_customer/: create_customer_controller.py
python/src/workshop_api/fitness/create_plan/: create_plan_controller.py
python/src/workshop_api/fitness/customer/: __init__.py  database.py  models.py  router.py  schemas.py  service.py
python/src/workshop_api/fitness/delete_customer/: delete_customer_controller.py
python/src/workshop_api/fitness/delete_plan/: delete_plan_controller.py
python/src/workshop_api/fitness/email/: __init__.py
python/tests/: test_customer.py  test_demo_seed.py  test_e00_membership.py  test_external_invoice_provider.py  test_health.py  test_membership.py  test_membership_lifecycle.py  test_plan.py  test_shared_customer.py  test_shared_plan.py
(+746 files in other folders)
